--- a/index.html
+++ b/index.html
@@ -12,147 +12,170 @@
 </head>
 
 <body>
-  <main class="main__content">
-    <header class="main__header">
-      <nav class="navigation center">
-        <a class="main__header-logo">
-          <img class="main__header-img" src="img/logo.svg" alt="logo" />
+  <main>
+    <header class="header">
+      <nav class="navigation">
+        <a class="navigation__logo">
+          <img src="img/logo.svg" alt="logo" />
         </a>
         <ul class="navigation__menu">
-          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Студия</a></li>
-          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Клиенты</a></li>
-          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="catalog.html">Магазин</a></li>
-          <li class="navigation__menu-item"><a class="navigation__menu-item-link" href="blank.html">Контакты</a></li>
+          <li class="navigation__menu-item">
+            <a href="blank.html">Студия</a>
+          </li>
+          <li class="navigation__menu-item">
+            <a href="blank.html">Клиенты</a>
+          </li>
+          <li class="navigation__menu-item">
+            <a href="catalog.html">Магазин</a>
+          </li>
+          <li class="navigation__menu-item">
+            <a href="blank.html">Контакты</a>
+          </li>
         </ul>
-        <a class="navigation__menu-item-link cart" href="blank.html">Корзина</a>
+        <a class="cart" href="blank.html">Корзина</a>
       </nav>
     </header>
     <section class="slider">
-      <ul class="slider__list center">
-        <li class="slider__list-item active">
-          <p class="slider__list-item-slogan">Долго, дорого,<br />скрупулезно.</p>
-          <p class="slider__list-item-text">Математически выверенный дизайн<br />для вашего сайта или мобильного
-            приложения.</p>
-          <a class="button button--red" href="blank.html">Узнать больше</a>
-        </li>
-        <li class="slider__list-item">
-          <p class="slider__list-item-slogan">Любим математику как никто другой.</p>
-          <p class="slider__list-item-text">Никакого креатива, только математические формулы<br>для расчета идеальных
-            пропорций.</p>
-          <a class="button button--red" href="blank.html">Узнать больше</a>
-        </li>
-        <li class="slider__list-item">
-          <p class="slider__list-item-slogan">Долго, дорого,<br />скрупулезно.</p>
-          <p class="slider__list-item-text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
-            начинается.</p>
-          <a class="button button--red" href="blank.html">Узнать больше</a>
-        </li>
-      </ul>
+      <div class="slider__wrapper">
+        <ul class="slider__list">
+          <li class="slider__list-item slider-list-item slide-smartphone active">
+            <p class="slider-list-item__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider-list-item__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
+              приложения.</p>
+            <a class="button button--red" href="blank.html">Узнать больше</a>
+          </li>
+          <li class="slider__list-item slider-list-item slide-computer">
+            <p class="slider-list-item__slogan">Любим математику как никто другой.</p>
+            <p class="slider-list-item__text">Никакого креатива, только математические формулы<br>для расчета идеальных
+              пропорций.</p>
+            <a class="button button--red" href="blank.html">Узнать больше</a>
+          </li>
+          <li class="slider__list-item slider-list-item slide-gadget">
+            <p class="slider-list-item__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider-list-item__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
+              начинается.</p>
+            <a class="button button--red" href="blank.html">Узнать больше</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="offers">
-      <ul class="offers__list center">
-        <li class="offers__list-item">
-          <img class="offers__list-item-img" src="img/all-sites.png" alt="sites" />
-          <h3 class="offers__list-item-title">Веб-сайты</h3>
-          <p class="offers__list-item-text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
+      <ul class="offers__list">
+        <li class="offers__list-item offers-list-item">
+          <img class="offers-list-item__img" src="img/all-sites.png" alt="sites" />
+          <h3 class="offers-list-item__title">Веб-сайты</h3>
+          <p class="offers-list-item__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
           <a class="button button--red" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <img class="offers__list-item-img" src="img/apps.png" alt="apps" />
-          <h3 class="offers__list-item-title">Приложения</h3>
-          <p class="offers__list-item-text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
+          <img class="offers-list-item__img" src="img/apps.png" alt="apps" />
+          <h3 class="offers-list-item__title">Приложения</h3>
+          <p class="offers-list-item__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
           <a class="button button--green" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <img class="offers__list-item-img" src="img/presentations.png" alt="presentations" />
-          <h3 class="offers__list-item-title">Презентации</h3>
-          <p class="offers__list-item-text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
+          <img class="offers-list-item__img" src="img/presentations.png" alt="presentations" />
+          <h3 class="offers-list-item__title">Презентации</h3>
+          <p class="offers-list-item__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
           <a class="button button--yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
     <section class="description">
-      <div class="description__wrapper center">
-        <div>
-          <p class="description__slogan">Мы — маленькая, но гордая<br />дизайн-студия из Краснодара.</p>
-          <p class="description__text">
+      <div class="description__wrapper">
+        <div class="description__about">
+          <p class="description__about-slogan">Мы — маленькая, но гордая<br />дизайн-студия из Краснодара.</p>
+          <p class="description__about-text">
             Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br />
             превыше креатива. Работаем не покладая рук, как роботы.
           </p>
-          <p class="description__advantages">Выполняем заказы на разработку:</p>
-          <ul class="description__advantages-list">
-            <li class="description__advantages-list-item">Веб-сайтов любой сложности</li>
-            <li class="description__advantages-list-item">Мобильных приложений для iOS и Android</li>
-            <li class="description__advantages-list-item">Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
+          <div>
+            <p class="description__advantages">Выполняем заказы на разработку:</p>
+            <ul class="description__advantages-list description-advantages-list">
+              <li class="description-advantages-list__item">Веб-сайтов любой сложности</li>
+              <li class="description-advantages-list__item">Мобильных приложений для iOS и Android</li>
+              <li class="description-advantages-list__item">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <img class="description__logo" src="img/nerds-illustration.png" alt="nerds-illustration" />
-          <p class="description__advantages-quality">С 2004 года любим точность во всём:</p>
-          <dl class="description__advantages-quality-list">
-            <dt class="quality__list-item-text">Уровень самоотдачи</dt>
-            <dd class="quality__list-item-numbers">146<span class="quality__list-item-percent">%</span></dd>
-            <dt class="quality__list-item-text">Соблюдение сроков</dt>
-            <dd class="quality__list-item-numbers">100<span class="quality__list-item-percent">%</span></dd>
-            <dt class="quality__list-item-text">Минимальная предоплата</dt>
-            <dd class="quality__list-item-numbers">50<span class="quality__list-item-percent">%</span></dd>
-          </dl>
+        <div class="benefits">
+          <p class="benefits__quality">С 2004 года любим точность во всём:</p>
+          <ul class="benefits__quality-list benefits-quality-list">
+            <li class="benefits-quality-list__item benefits-quality-list-item">
+              <p class="benefits-quality-list-item__percent">146</p>
+              <p class="benefits-quality-list-item__text">Уровень<br />самоотдачи</p>
+            </li>
+            <li class="benefits-quality-list__item">
+              <p class="benefits-quality-list-item__percent">100</p>
+              <p class="benefits-quality-list-item__text">Соблюдение<br />сроков</p>
+            </li>
+            <li class="benefits-quality-list__item">
+              <p class="benefits-quality-list-item__percent">50</p>
+              <p class="benefits-quality-list-item__text">Минимальная<br />предоплата</p>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
     <section class="partners">
-      <ul class="partners__list center">
-        <li class="partners__list-item">
-          <a href="#">
-            <img class="partners__list-item-academy" src="img/htmlacademy.svg" alt="htmlacademy" />
+      <ul class="partners__list">
+        <li class="partners__list-item partners-list-item">
+          <a class="partners-list-item__academy" href="#">
+            <img src="img/htmlacademy.svg" alt="htmlacademy" />
           </a>
         </li>
-        <li class="partners__list-item">
-          <a href="#">
-            <img class="partners__list-item-borodinski" src="img/borodinski.svg" alt="borodinski" />
+        <li class="partners__list-item partners-list-item">
+          <a class="partners-list-item__borodinski" href="#">
+            <img src="img/borodinski.svg" alt="borodinski" />
           </a>
         </li>
-        <li class="partners__list-item">
-          <a href="#">
-            <img class="partners__list-item-pink" src="img/pink.svg" alt="pink" />
+        <li class="partners__list-item partners-list-item">
+          <a class="partners-list-item__pink" href="#">
+            <img src="img/pink.svg" alt="pink" />
           </a>
         </li>
-        <li class="partners__list-item">
-          <a href="#">
-            <img class="partners__list-item-mishka" src="img/mishka.svg" alt="mishka" />
+        <li class="partners__list-item partners-list-item">
+          <a class="partners-list-item__mishka" href="#">
+            <img src="img/mishka.svg" alt="mishka" />
           </a>
         </li>
       </ul>
     </section>
   </main>
-  <footer class="main__footer">
+  <footer class="footer">
     <section class="contacts">
       <div class="map__wrapper">
-        <img class="map__wrapper-img" src="img/map.png" alt="map" />
-      </div>
-      <div class="contacts__wrapper">
-        <p class="contacts__title">Nёrds Design Studio</p>
-        <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
-        <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-        <a class="button button--red" href="#">Напишите нам</a>
+        <div class="map">
+          <img class="map__img" src="img/map.png" alt="map" />
+        </div>
+        <div class="contacts__wrapper">
+          <p class="contacts__title">Nёrds Design Studio</p>
+          <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+          <a class="button button--red" href="#">Напишите нам</a>
+        </div>
       </div>
     </section>
     <section class="socials">
-      <div class="socials__wrapper center">
+      <div class="socials__wrapper">
         <ul class="socials__list">
-          <li class="socials__list-item socials__list-vk">
-            <a class="socials__list-item-link" href="#">Вконтакте</a>
+          <li class="socials__list-item socials-list-item">
+            <a class="socials-list-item__link" href="#">
+              <img src="img/vk-icon.svg" width="27" height="15" alt="Иконка В контакте" /></a>
           </li>
-          <li class="socials__list-item socials__list-fb">
-            <a class="socials__list-item-link" href="#">Фейсбук</a>
+          <li class="socials__list-item">
+            <a class="socials-list-item__link" href="#">
+              <img src="img/fb-icon.svg" width="27" height="15" alt="Иконка В контакте" /></a>
           </li>
-          <li class="socials__list-item socials__list-inst">
-            <a class="socials__list-item-link" href="#">Инстаграм</a>
+          <li class="socials__list-item">
+            <a class="socials-list-item__link" href="#">
+              <img src="img/inst-icon.svg" width="27" height="15" alt="Иконка В контакте" />
+            </a>
           </li>
         </ul>
-        <div>
-          <p class="footer__offer">Давайте дружить, это выгодно!</p>
-          <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
+        <div class="footer__inner">
+          <p class="footer__inner-offer">Давайте дружить, это выгодно!</p>
+          <p class="footer__inner-discount">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </div>
     </section>
