--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
     <section class="slider">
       <div class="slider__wrapper">
         <ul class="slider__list">
-          <li class="slider__list-item slider-list-item slide-smartphone active">
-            <p class="slider-list-item__slogan">Долго, дорого,<br />скрупулезно.</p>
-            <p class="slider-list-item__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
+          <li class="slider__list-item slide-smartphone active">
+            <p class="slider__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
               приложения.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
-          <li class="slider__list-item slider-list-item slide-computer">
-            <p class="slider-list-item__slogan">Любим математику как никто другой.</p>
-            <p class="slider-list-item__text">Никакого креатива, только математические формулы<br>для расчета идеальных
+          <li class="slider__list-item slide-computer">
+            <p class="slider__slogan">Любим математику как никто другой.</p>
+            <p class="slider__text">Никакого креатива, только математические формулы<br>для расчета идеальных
               пропорций.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
-          <li class="slider__list-item slider-list-item slide-gadget">
-            <p class="slider-list-item__slogan">Долго, дорого,<br />скрупулезно.</p>
-            <p class="slider-list-item__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
+          <li class="slider__list-item slide-gadget">
+            <p class="slider__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
               начинается.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
@@ -61,22 +61,22 @@
     </section>
     <section class="offers">
       <ul class="offers__list">
-        <li class="offers__list-item offers-list-item">
-          <img class="offers-list-item__img" src="img/all-sites.png" alt="sites" />
-          <h3 class="offers-list-item__title">Веб-сайты</h3>
-          <p class="offers-list-item__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
+        <li class="offers__list-item">
+          <img class="offers__img" src="img/all-sites.png" alt="sites" />
+          <h3 class="offers__title">Веб-сайты</h3>
+          <p class="offers__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
           <a class="button button--red" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <img class="offers-list-item__img" src="img/apps.png" alt="apps" />
-          <h3 class="offers-list-item__title">Приложения</h3>
-          <p class="offers-list-item__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
+          <img class="offers__img" src="img/apps.png" alt="apps" />
+          <h3 class="offers__title">Приложения</h3>
+          <p class="offers__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
           <a class="button button--green" href="blank.html">Заказать</a>
         </li>
         <li class="offers__list-item">
-          <img class="offers-list-item__img" src="img/presentations.png" alt="presentations" />
-          <h3 class="offers-list-item__title">Презентации</h3>
-          <p class="offers-list-item__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
+          <img class="offers__img" src="img/presentations.png" alt="presentations" />
+          <h3 class="offers__title">Презентации</h3>
+          <p class="offers__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
           <a class="button button--yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
@@ -91,27 +91,27 @@
           </p>
           <div>
             <p class="description__advantages">Выполняем заказы на разработку:</p>
-            <ul class="description__advantages-list description-advantages-list">
-              <li class="description-advantages-list__item">Веб-сайтов любой сложности</li>
-              <li class="description-advantages-list__item">Мобильных приложений для iOS и Android</li>
-              <li class="description-advantages-list__item">Слайдшоу и видео для корпоративных презентаций</li>
+            <ul class="description__advantages-list">
+              <li class="description__item">Веб-сайтов любой сложности</li>
+              <li class="description__item">Мобильных приложений для iOS и Android</li>
+              <li class="description__item">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
           </div>
         </div>
         <div class="benefits">
           <p class="benefits__quality">С 2004 года любим точность во всём:</p>
-          <ul class="benefits__quality-list benefits-quality-list">
-            <li class="benefits-quality-list__item benefits-quality-list-item">
-              <p class="benefits-quality-list-item__percent">146</p>
-              <p class="benefits-quality-list-item__text">Уровень<br />самоотдачи</p>
+          <ul class="benefits__quality-list">
+            <li class="benefits__item">
+              <p class="benefits__percent">146</p>
+              <p class="benefits__text">Уровень<br />самоотдачи</p>
             </li>
-            <li class="benefits-quality-list__item">
-              <p class="benefits-quality-list-item__percent">100</p>
-              <p class="benefits-quality-list-item__text">Соблюдение<br />сроков</p>
+            <li class="benefits__item">
+              <p class="benefits__percent">100</p>
+              <p class="benefits__text">Соблюдение<br />сроков</p>
             </li>
-            <li class="benefits-quality-list__item">
-              <p class="benefits-quality-list-item__percent">50</p>
-              <p class="benefits-quality-list-item__text">Минимальная<br />предоплата</p>
+            <li class="benefits__item">
+              <p class="benefits__percent">50</p>
+              <p class="benefits__text">Минимальная<br />предоплата</p>
             </li>
           </ul>
         </div>
@@ -119,25 +119,17 @@
     </section>
     <section class="partners">
       <ul class="partners__list">
-        <li class="partners__list-item partners-list-item">
-          <a class="partners-list-item__academy" href="#">
-            <img src="img/htmlacademy.svg" alt="htmlacademy" />
-          </a>
+        <li class="partners__list-item">
+          <a class="partners__academy" href="#"></a>
         </li>
-        <li class="partners__list-item partners-list-item">
-          <a class="partners-list-item__borodinski" href="#">
-            <img src="img/borodinski.svg" alt="borodinski" />
-          </a>
+        <li class="partners__list-item">
+          <a class="partners__borodinski" href="#"></a>
         </li>
-        <li class="partners__list-item partners-list-item">
-          <a class="partners-list-item__pink" href="#">
-            <img src="img/pink.svg" alt="pink" />
-          </a>
+        <li class="partners__list-item">
+          <a class="partners__pink" href="#"></a>
         </li>
-        <li class="partners__list-item partners-list-item">
-          <a class="partners-list-item__mishka" href="#">
-            <img src="img/mishka.svg" alt="mishka" />
-          </a>
+        <li class="partners__list-item">
+          <a class="partners__mishka" href="#"></a>
         </li>
       </ul>
     </section>
@@ -159,17 +151,17 @@
     <section class="socials">
       <div class="socials__wrapper">
         <ul class="socials__list">
-          <li class="socials__list-item socials-list-item">
-            <a class="socials-list-item__link" href="#">
-              <img src="img/vk-icon.svg" width="27" height="15" alt="Иконка В контакте" /></a>
+          <li class="socials__list-item">
+            <a class="socials__link" href="#">
+              <img src="img/vk-icon.svg" alt="Иконка В контакте" /></a>
           </li>
           <li class="socials__list-item">
-            <a class="socials-list-item__link" href="#">
-              <img src="img/fb-icon.svg" width="27" height="15" alt="Иконка В контакте" /></a>
+            <a class="socials__link" href="#">
+              <img src="img/fb-icon.svg" alt="Иконка В контакте" /></a>
           </li>
           <li class="socials__list-item">
-            <a class="socials-list-item__link" href="#">
-              <img src="img/inst-icon.svg" width="27" height="15" alt="Иконка В контакте" />
+            <a class="socials__link" href="#">
+              <img src="img/inst-icon.svg" alt="Иконка В контакте" />
             </a>
           </li>
         </ul>
